# csvai

./: .gitignore  README.md  csvai-cli.py  csvai-ui.py  csvai.py  example.env  io_utils.py  pyproject.toml  render.yaml  requirements.txt
csvai/: __init__.py  __main__.py  cli.py  io_utils.py  launch.py  processor.py  settings.py  ui.py
example/: address.prompt.txt  address.schema.json
examples/: address.csv  address.prompt.txt  address.schema.json  address.xlsx  image.csv  image.prompt.txt  image.schema.json  sample-images.csv  sample-images.prompt.txt  sample-images.schema.json
