[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csvai"
version = "0.1.0"
description = "Enrich CSV or Excel rows using OpenAI models."
readme = "README.md"
authors = [
    {name = "Zyxware Technologies"},
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "openai>=1.99.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
ui = ["streamlit"]

[project.scripts]
csvai = "csvai.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]

