[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csvai"
version = "0.1.0"
description = "Enrich CSV or Excel rows using OpenAI models."
readme = "README.md"
authors = [
    {name = "Zyxware Technologies"},
]
# Add keywords for better discoverability on PyPI
keywords = ["csv", "excel", "ai", "openai", "data enrichment", "llm", "automation"]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.99.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
ui = ["streamlit"]

[project.scripts]
csvai = "csvai.cli:main"

[project.urls]
"Homepage" = "https://www.zyxware.com/article/6935/csvai-automate-data-enrichment-any-csv-or-excel-file-generative-ai"
"Bug Tracker" = "https://github.com/zyxware/csvai/issues"
"Source" = "https://github.com/zyxware/csvai"
"Contact" = "https://www.zyxware.com/contact-us" 
